update_1_index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
              <div class="content-icon-settings">
                      <i class="bi bi-gear-fill absolute"></i>
              </div>
-             <div id="background" class="background-image-divider absolute"></div>
+             <div id="background" class="background-image-divider absolute">
+                 <img src="assets/images/home/home2.jpg" alt="home">
+             </div>
              <section id="home" class="relative page">
                  
                      <div class="home-user-infos absolute center-element">
