--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
              <div class="content-icon-settings">
                      <i class="bi bi-gear-fill absolute"></i>
              </div>
-             <div id="background" class="background-image-divider absolute">
-                 <img src="assets/images/home/home2.jpg" alt="home">
-             </div>
+             <img class="background absolute" src="assets/images/home/home2.jpg" alt="home">
+            <!--  <div id="background" class="background-image-divider ab5solute">
+             </div> -->
              <section id="home" class="relative page">
                  
                      <div class="home-user-infos absolute center-element">
@@ -106,7 +106,7 @@
                  
              </section>
              <section id="about-me" class="absolute page">
-                 <div class="section-title flex aic gap-10">
+                 <div class="section-title flex aic gap-20">
                      <h2  class="text-shadow">About Me</h2>
                      <p>Artist, Thinker, Creative Doer</p>
                  </div>
@@ -361,7 +361,7 @@
                  </div>
              </section>
              <section id="resume" class="absolute page">
-                <div class="section-title flex aic gap-10">
+                <div class="section-title flex aic gap-20">
                     <h2  class="text-shadow">Resume</h2>
                     <p>6 years of Experience</p>
                 </div>
@@ -524,7 +524,7 @@
                 </div>
              </section>
              <section id="portfolio" class="absolute page">
-                <div class="section-title flex aic gap-10">
+                <div class="section-title flex aic gap-20">
                     <h2  class="text-shadow">Portfolio</h2>
                     <p>My Best Works</p>
                 </div>
@@ -610,7 +610,7 @@
                 </div>
              </section>
              <section id="contact" class="absolute page">
-                <div class="section-title flex aic gap-10">
+                <div class="section-title flex aic gap-20">
                     <h2  class="text-shadow">Contact</h2>
                     <p>Get in Touch</p>
                 </div>
